fix(ui): sidebar and form buttons adjustments - Moved sidebar to the right on mobile - Adjusted action buttons in the sidebar - Centered buttons in edit forms - Added exit button to sidebar on mobile

--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -206,6 +206,15 @@
   border-bottom-color: transparent;
 }
 
+#close-sidebar-mobile:hover {
+  background-color: rgb(245, 131, 131);
+}
+
+#close-sidebar-mobile:active{
+  background-color: rgb(247, 48, 48);
+}
+
+
 @keyframes btn-spin {
   to { transform: rotate(360deg); }
 }
@@ -235,6 +244,12 @@
     display: flex;
     width: 44px;
     height: 44px;
+  }
+
+  #close-sidebar-mobile {
+    display: flex;
+    margin-left: auto;
+    transition: background 0.3 ease;
   }
 
   .fab {
